fix: Mobile iOS/Android, Stake block on skeleton loading causes content overflow

--- a/src/pages/PageStake/components/Stake/Stake.module.scss
+++ b/src/pages/PageStake/components/Stake/Stake.module.scss
@@ -148,11 +148,11 @@
 
 @include b('mobile') {
   .stakeContainer {
-    height: 400px;
+    height: 430px;
     padding: 20px;
 
     &_compounder {
-      height: 520px;
+      height: 570px;
     }
 
     &_notConnectedWallet {
